<resources>
    <string name="app_name">SISALTUR</string>

    <string name="menu_opciones_administrador">MENÚ ADMINISTRADOR</string>
    <string name="TituloRegCentro">REGISTRO DE INFORMACIÓN</string>
    <string name="nombre_asignado">Nombre asignado</string>
    <string name="escribe_aqu">Escribe aquí</string>
    <string name="centro_de_desarrollo">Centro de desarrollo</string>
    <string name="hogarcomunitario">Hogar comunitario</string>
    <string name="censo">Censo Poblacional</string>
    <string name="nombreinfante">Nombre Del Infante</string>
    <string name="apellidoinfante">Apellido Del Infante</string>
    <string name="txtListaCDHI">Registro de CDIH/HCB</string>
    <string name="txtConsultaMinutas">Consulta de Minutas</string>
    <string name="txtNumMinuta">N° MINUTA</string>
    <string name="txtCreacionCDI">Creación de CDI/HCB</string>
    <string name="txtHintNombreCDI">Escribe aquí nombre del centro</string>
    <string name="txtTipoCDI">Tipo de centro:</string>
    <string name="txtRbCentroDesarrollo">Centro Desarrollo Infantil</string>
    <string name="txtRbHogarComunitario">Hogar Comunitario Básico</string>
    <string name="txtUbicacion">Ubicación:</string>
    <string name="txtDatosPersona">Datos de la persona encargada</string>
    <string name="txtNombreApellido">Nombres y apellidos:</string>
    <string name="txtHintNombreApellido">Escribe aquí nombre y apellido</string>
    <string name="txtDireccion">Dirección:</string>
    <string name="txtHintDireccion">Escribe aquí dirección</string>
    <string name="txtTelefono">Teléfono:</string>
    <string name="txtHintTelefono">Escribe aquí número de teléfono</string>
    <string name="txtDatosContacto">Datos del contacto</string>
    <string name="txtActivo">Activo</string>
    <string name="txtBtnRegistrar">Registrar</string>
    <string name="txtBtnActualizar">Actualizar</string>
    <string name="txtCodigo">Código</string>
    <string name="txtNombreGrupo">Nombre Grupo</string>
    <string name="txtNombreAlimento">Nombre Alimento</string>
    <string name="txtNombreRegional">Nombre Regional</string>
    <string name="txtRegistroCivil">Registro Civil</string>
    <string name="txtNombreInfante">Nombre Infante</string>
    <string name="txtNombreCDIH">Nombre CDIH/HCB</string>
    <string name="txtCensoPoblacional">Censo Poblacional</string>
    <string name="txtNumeroRegistro">Número de registro civil:</string>
    <string name="txtHintNumeroRegistro">Escriba aquí...</string>
    <string name="txtNombreInfante2">Nombre del infante:</string>
    <string name="txtHintNombre">Escriba el nombre</string>
    <string name="txtApellidoInfante">Apellido del infante:</string>
    <string name="txtHintApellido">Escriba el apellido</string>
    <string name="txtGenero">Género del infante:</string>
    <string name="txtMasculino">Masculino</string>
    <string name="txtFemenino">Femenino</string>
    <string name="txtFechaNacimiento">Fecha del nacimiento:</string>
    <string name="txtHintFecha">Selecciona la fecha</string>
    <string name="txtObservaciones">Observaciones:</string>
    <string name="txtHintObservaciones">Escriba aquí observaciones relacionadas con el infante</string>
    <string name="txtCentro">Seleccione el centro en que está registrado:</string>
    <string name="txtNombrePadre">Nombres y apellidos del padre:</string>
    <string name="txtHintNombrePadre">Escriba el nombre del padre</string>
    <string name="txtTelefonoPadre">Teléfono del padre:</string>
    <string name="txtHintTelefonoPadre">Escriba el teléfono del padre</string>
    <string name="txtDireccionPadre">Dirección del padre:</string>
    <string name="txtHintDireccionPadre">Escriba la dirección del padre</string>
    <string name="txtNombreMadre">Nombres y apellidos de la madre:</string>
    <string name="txtHintNombreMadre">Escriba el nombre de la madre</string>
    <string name="txtTelefonoMadre">Teléfono de la madre:</string>
    <string name="txtHintTelefonoMadre">Escriba el teléfono del madre</string>
    <string name="txtDireccionMadre">Dirección de la madre:</string>
    <string name="txtHintDireccionMadre">Escriba la dirección de la madre</string>
    <string name="txtBtnGuardar">Guardar</string>
    <string name="txtX">*</string>
    <string name="txtProducto">Producto</string>
    <string name="txtUnd">Und.</string>
    <string name="txtCant">Cant.</string>
    <string name="txtvalor">valor</string>
    <string name="txt0">0</string>
    <string name="txtCreacionCalendario">Creación de Calendarios</string>
    <string name="txtSemana">SEMANA</string>
    <string name="txtMinuta">MINUTA</string>
    <string name="txtLunes">Lunes</string>
    <string name="txtMartes">Martes</string>
    <string name="txtMiercoles">Miércoles</string>
    <string name="txtJueves">Jueves</string>
    <string name="txtViernes">Viernes</string>
    <string name="txtCreacionUsuarios">Creación de usuarios</string>
    <string name="txtNombreUsuario">Nombre del Usuario:</string>
    <string name="txtHintNombreUsuario">Escriba nombre usuario</string>
    <string name="txtContraseña">Contraseña:</string>
    <string name="txtHintContraseña">Escriba su contraseña</string>
    <string name="txtVerificaContraseña">Verifique su Contraseña:</string>
    <string name="txtCorreo">Correo:</string>
    <string name="txtHintCorreo">Escriba el correo</string>
    <string name="txtRol">Rol</string>
    <string name="txtGestor">Gestor</string>
    <string name="txtCompras">Compras</string>
    <string name="txtBasico">Básico</string>
    <string name="txtRegistrarUsuario">Registrar Usuario</string>
    <string name="txtActualizaUsuario">Actualizar Usuario</string>
    <string name="txtEntregaInsumos">Entrega de Insumos</string>
    <string name="txtCDIHCB">CDI/HCB</string>
    <string name="txtFechaEntrega">Fecha de entrega:</string>
    <string name="txtHintSeleccionFecha">seleccione fecha</string>
    <string name="txtGenerarCodigo">Generar código</string>
    <string name="txtCompraGaleria">Compra en Galería</string>
    <string name="txtFechaCompra">Fecha de compra:</string>
    <string name="txtIngredientesComprar">Ingredientes a comprar</string>
    <string name="txtIngredientesComprados">Ingredientes comprados</string>
    <string name="txtTotalComprado">Total comprado ($)</string>
    <string name="txtBtnCalcular">Calcular</string>
    <string name="txtBtnGuardar2">Guardar</string>
    <string name="txtValorUnidad">Valor Unidad</string>
    <string name="txtCostoTotal">Costo Total</string>
    <string name="txtVacio">VACIO</string>
    <string name="txtPreparacion">Preparación</string>
    <string name="txtProcedimiento">Procedimiento</string>
    <string name="txtInfantesAtendidos">Infantes atendidos</string>
    <string name="txtIngredientesEntregar">Ingredientes a entregar</string>
    <string name="txtAprobar">Aprobar</string>
    <string name="txtCantidadE">Cantidad Entregada</string>
    <string name="txtBueno">Bueno</string>
    <string name="txtRegular">Regular</string>
    <string name="txtMalo">Malo</string>
    <string name="txtListaCensoPoblacion">Censo de población</string>
    <string name="txtPlan">Plan Alimenticio</string>
    <string name="txtListarUsuarios">Listado de Usuarios</string>
    <string name="txtIngresoUsuarios">Ingreso de Usuarios</string>
    <string name="txtHintUsuarios">usuario</string>
    <string name="txtHintContraseñas">contraseña</string>
    <string name="txtAcciones">Acciones sobre usuarios</string>
    <string name="txtCrearUsuarios">Crear usuarios</string>
    <string name="txtModificarUsuario">Modificar usuarios</string>
    <string name="txtPublicacionMinutas">Publicación de Minutas</string>
    <string name="txt00002019">00/00/2019</string>
    <string name="txtLunes1">LUNES</string>
    <string name="txtMartes1">MARTES</string>
    <string name="txtMiercoles1">MIÉRCOLES</string>
    <string name="txtJueves1">JUEVES</string>
    <string name="txtViernes1">VIERNES</string>
    <string name="txtMinutaM01">Minuta M01</string>
    <string name="txtMinutaM02">Minuta M02</string>
    <string name="txtMinutaM03">Minuta M03</string>
    <string name="txtMinutaM04">Minuta M04</string>
    <string name="txtMinutaM05">Minuta M05</string>
    <string name="txtCantE">Cant E</string>
    <string name="txtNombreAtendido">Nombre Infante</string>
    <string name="totalinfantes">Total Infantes</string>

</resources>
