<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/idcontenerRegCDI"
    android:layout_height="match_parent"
    tools:context=".RegistrarCDIHCB">
    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/iconosuperior"
            android:rotation="0"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="@color/colorClaro"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1.5"
        android:text="@string/txtCreacionCDI"
        android:textColor="@color/colorNegro"
        android:layout_marginTop="-45dp"
        android:textSize="25sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idtvtvnombreCentro"
                style="@style/Encabezado"
                android:text="@string/txtNombreAsignado" />
            <EditText
                android:id="@+id/idedtnombreregCentro"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintNombreCDI"
                android:inputType="textPersonName"/>
            <TextView
                style="@style/Encabezado"
                android:layout_gravity="center"
                android:text="@string/txtTipoCDI" />
            <RadioGroup
                android:id="@+id/idrgUbicaRegCDI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRojo"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:typeface="monospace">
                <RadioButton
                    android:id="@+id/idrbHogar"
                    style="@style/Encabezado"
                    android:layout_width="160dp"
                    android:buttonTint="@color/colorRojo"
                    android:textSize="12sp"
                    android:text="@string/txtRbHogarComunitario"/>
                <RadioButton
                    android:id="@+id/idrbCentro"
                    style="@style/Encabezado"
                    android:layout_width="160dp"
                    android:buttonTint="@color/colorRojo"
                    android:textSize="12sp"
                    android:text="@string/txtRbCentroDesarrollo"/>
            </RadioGroup>
            <TextView
                style="@style/Encabezado"
                android:layout_gravity="center"
                android:text="@string/txtUbicacion"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorClaro">
                <Spinner
                    android:gravity="center"
                    android:layout_width="280dp"
                    android:layout_height="30dp"
                    style="@style/SelectorSemana"
                    android:id="@+id/idspnVeredas"/>
            </RelativeLayout>
            <TextView
                style="@style/Subtitulo"
                android:id="@+id/idtvresponsable"
                android:text="@string/txtDatosPersona"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtNombreApellido"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintNombreApellido"
                android:id="@+id/idedtnombreencargado"
                android:inputType="textPersonName"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtDireccion"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintDireccion"
                android:id="@+id/idedtdirEncargado"
                android:inputType="textPostalAddress"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtTelefono"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintTelefono"
                android:id="@+id/idedttelEncargado"
                android:inputType="phone"
                android:maxLength="15"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                style="@style/Subtitulo"
                android:id="@+id/idtvContacto"
                android:text="@string/txtDatosContacto"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtNombreApellido"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintNombreApellido"
                android:id="@+id/idedtnombreContacto"
                android:inputType="textPersonName"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtDireccion"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintDireccion"
                android:id="@+id/idedtdirContacto"
                android:inputType="textPostalAddress"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtTelefono"/>
            <EditText
                style="@style/IngresoDatos"
                android:hint="@string/txtHintTelefono"
                android:id="@+id/idedttelContacto"
                android:inputType="phone"
                android:maxLength="15"/>
            <CheckBox
                android:id="@+id/activocdi"
                android:text="@string/txtActivo"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/colorClaro"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1.5"/>
            <Button
                android:id="@+id/idbtnregCDI"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/personalizar_button"
                android:text="@string/txtBtnRegistrar"
                android:textAllCaps="false"
                android:textColor="@color/colorClaro" />
            <Button
                android:id="@+id/idbtnactCDI"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/personalizar_button"
                android:text="@string/txtBtnActualizar"
                android:textAllCaps="false"
                android:textColor="@color/colorClaro" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>