<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".usuarios.CrearUsuarios">

    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/iconosuperior"
            android:rotation="0"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-45dp"
        android:shadowColor="@color/colorPrimarioOscuro"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1.5"
        android:text="@string/txtCreacionUsuarios"
        android:textColor="@color/colorNegro"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtNombreApellidoUsu"/>
            <EditText
                android:id="@+id/editTextNombre"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintNombreApellido"
                android:inputType="textPersonName"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtNombreUsuario"/>
            <EditText
                android:id="@+id/editTextUsuario"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintNombreUsuario"
                android:inputType="textPostalAddress"
                android:maxLength="15"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtContraseña"/>
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintContraseña"
                android:inputType="textPassword" />
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtVerificaContraseña"
                 />
            <EditText
                android:id="@+id/editTextVerificaPassword"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintContraseña"
                android:inputType="textPassword"
                android:maxLength="15"/>
            <TextView
                style="@style/Encabezado"
                android:text="@string/txtCorreo" />
            <EditText
                android:id="@+id/editTextCorreo"
                style="@style/IngresoDatos"
                android:hint="@string/txtHintCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="45" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/txtTituloRol"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="@color/colorClaro"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="1.5"
                    android:text="@string/txtRol"
                    android:textColor="@color/colorNegro"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/grupoRoles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTituloRol"
                    android:gravity="center"
                    >
                    <RadioButton
                        android:id="@+id/rolgest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/txtGestor"
                        android:textColor="@color/colorNegro"
                        android:typeface="monospace"
                        app:buttonTint="@color/colorRojo"
                        android:layout_gravity="start"
                        />
                    <RadioButton
                        android:id="@+id/rolcomp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/txtCompras"
                        android:textColor="@color/colorNegro"
                        android:typeface="monospace"
                        app:buttonTint="@color/colorRojo"
                        android:layout_gravity="start"
                        />
                    <RadioButton
                        android:id="@+id/rolbasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/txtBasico"
                        android:textColor="@color/colorNegro"
                        android:typeface="monospace"
                        app:buttonTint="@color/colorRojo"
                        android:layout_gravity="start"
                        />
                </RadioGroup>
                <Button
                    android:id="@+id/botonRegistrar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/personalizar_button"
                    android:text="@string/txtRegistrarUsuario"
                    android:textAllCaps="false"
                    android:textColor="@color/colorClaro"
                    android:layout_toEndOf="@+id/grupoRoles"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="60dp"/>
                <Button
                    android:id="@+id/botonActualizar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/personalizar_button"
                    android:gravity="center"
                    android:text="@string/txtActualizaUsuario"
                    android:textAllCaps="false"
                    android:textColor="@color/colorClaro"
                    android:layout_toEndOf="@+id/grupoRoles"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="60dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>