<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".usuarios.OpcionesUsuarios">
    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="80dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logoinicial"
            android:rotation="270"
            android:scaleType="fitCenter"
            android:scaleX="1.3"
            android:scaleY=".5"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="@color/colorClaro"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1.5"
        android:layout_marginTop="-60dp"
        android:text="@string/txtAcciones"
        android:textColor="@color/colorNegro"
        android:textSize="25sp"
        android:textStyle="bold" />
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <Button
                android:id="@+id/botonCrea"
                android:layout_width="200dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:background="@drawable/personalizar_button"
                android:text="@string/txtCreacionUsuarios"
                android:textAllCaps="false"
                android:textColor="@color/colorClaro" />
            <Button
                android:id="@+id/botonGestion"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_height="40dp"
                android:background="@drawable/personalizar_button"
                android:text="@string/txtModificarUsuario"
                android:textAllCaps="false"
                android:textColor="@color/colorClaro" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>