<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EntregaCompra">
    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/iconosuperior"
            android:rotation="0"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="@color/colorPrimarioOscuro"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1.5"
        android:text="@string/txtEntregaInsumos"
        android:textColor="@color/colorNegro"
        android:layout_marginTop="-45dp"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_marginTop="15dp"
        android:text="@string/txtSemana"
        style="@style/Subtitulo"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorClaro">
        <Spinner
            android:id="@+id/selectorSemanaEI"
            android:layout_width="280dp"
            android:layout_height="30dp"
            style="@style/SelectorSemana"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="2">
            <TextView
                android:text="@string/txtEntregada"
                style="@style/Subtitulo"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/txtPendiente"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/Subtitulo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerEntregaHecha"
                android:layout_width="180dp"
                android:layout_height="80dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerEntregaPendiente"
                android:layout_width="180dp"
                android:layout_height="80dp"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollEntregas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/txtCDIHCB"
                style="@style/Subtitulo"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorClaro">
                <Spinner
                    android:id="@+id/selectorCDIEI"
                    android:layout_width="280dp"
                    android:layout_height="30dp"
                    style="@style/SelectorSemana"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/textoFecha"
                    android:layout_marginTop="8dp"
                    android:text="@string/txtFechaEntrega"
                    style="@style/Subtitulo"
                    />
                <EditText
                    android:id="@+id/editFechaEntregaEI"
                    android:layout_width="wrap_content"
                    android:hint="@string/txtHintSeleccionFecha"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/IngresoDatos"
                    android:onClick="mostrarCalendarioEI"
                    android:layout_toEndOf="@+id/textoFecha"
                    />
            </RelativeLayout>
            <Button
                android:id="@+id/botonQR"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/personalizar_button"
                android:text="@string/txtGenerarCodigo"
                android:textAllCaps="false"
                android:textColor="@color/colorClaro" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorNegro" />
            <ImageView
                android:id="@+id/imagenQR"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_lock_lock" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorNegro" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>